# isle-chat

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  run-load-test.sh  run-tests.sh
.github/workflows/: docker-publish.yml  docs.yml  test.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile
backend/src/: config.h  main.cpp  recurrence.cpp  recurrence.h  upload_manager.cpp  upload_manager.h
backend/src/ai/: llm_client.cpp  llm_client.h  tool_registry.cpp  tool_registry.h
backend/src/auth/: pki.cpp  totp.cpp  totp.h  webauthn.cpp
backend/src/db/: connection_pool.cpp  connection_pool.h  database.cpp  database.h  db_thread_pool.cpp
backend/src/handlers/: admin_approval_utils.cpp  admin_approval_utils.h  admin_handler.cpp  admin_handler.h  admin_settings_utils.cpp  admin_settings_utils.h  ai_handler.cpp  ai_handler.h  auth_handler.cpp  auth_handler.h  auth_payload_utils.cpp  auth_payload_utils.h  auth_utils.cpp  auth_utils.h  calendar_handler.cpp  calendar_handler.h  channel_handler.cpp  channel_handler.h  cors_utils.cpp  cors_utils.h  file_access_utils.cpp  file_access_utils.h  file_handler.cpp  file_handler.h  format_utils.cpp  format_utils.h  handler_utils.cpp  handler_utils.h  notification_handler.cpp  notification_handler.h  request_scope.h  search_handler.cpp  search_handler.h  space_file_handler.cpp  space_file_handler.h  space_handler.cpp  space_handler.h  task_board_handler.cpp  task_board_handler.h  user_handler.cpp  (+3 more)
backend/src/logging/: logger.cpp  logger.h
backend/src/metrics/: metrics.cpp  metrics.h
backend/src/models/: ai_conversation.h  calendar_event.h  channel.h  message.h  space.h  space_file.h
backend/src/redis/: redis_envelope.cpp  redis_envelope.h  redis_publisher.cpp  redis_publisher.h  redis_pubsub.cpp  redis_pubsub.h  redis_subscriber.cpp  redis_subscriber.h
backend/src/ws/: ws_handler.cpp  ws_handler.h
backend/tests/: CMakeLists.txt  test_admin_approval_utils.cpp  test_admin_settings_utils.cpp  test_auth_payload_utils.cpp  test_auth_utils.cpp  test_calendar.cpp  test_config.cpp  test_database.cpp  test_file_access_utils.cpp  test_file_handler.cpp  test_handler_utils.cpp  test_logger.cpp  test_metrics.cpp  test_password.cpp  test_pki.cpp  test_recurrence.cpp  test_redis_envelope.cpp  test_redis_pubsub.cpp  test_space_files.cpp  test_totp.cpp  test_upload_manager.cpp  test_webauthn.cpp
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guides/: azure-deployment.md  ec2-deployment.md  gcp-deployment.md  lightsail-deployment.md  local-deployment.md
docs/ops/: redis-pubsub.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts  auth.spec.ts  helpers.ts
frontend/src/: App.tsx  globals.d.ts  hero.ts  index.css  main.tsx
frontend/src/components/admin/: DangerZone.tsx  InviteManager.tsx  JoinRequests.tsx  RecoveryTokenManager.tsx  ServerSettings.tsx  SetupWizard.tsx  StorageManager.tsx  SystemMonitor.tsx  UserManager.tsx
frontend/src/components/ai/: AiChatPanel.tsx  AiConversationList.tsx  AiMessageBubble.tsx  AiMessageInput.tsx  AiMessageList.tsx  AiToolUseCard.tsx
frontend/src/components/auth/: AddDevice.tsx  LoginPage.tsx  RecoveryKeyDisplay.tsx  RecoveryLogin.tsx  RegisterPage.tsx  RequestAccess.tsx
frontend/src/components/calendar/: AgendaView.tsx  CalendarPermissions.tsx  CalendarView.tsx  DayView.tsx  EventModal.tsx  MonthView.tsx  RecurrenceEditor.tsx  WeekView.tsx
frontend/src/components/channels/: ChannelBrowser.tsx  ChannelList.tsx  ChannelSettings.tsx  CreateChannel.tsx  DMList.tsx
frontend/src/components/chat/: EmojiPickerPopup.tsx  MentionAutocomplete.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx  mentionUtils.ts
frontend/src/components/common/: ConnectionLostModal.tsx  OnlineStatusDot.tsx  ResizeHandle.tsx  RubiksCube.tsx  SettingsLayout.tsx  UserPicker.tsx  UserPopoverCard.tsx  settingsNavContext.ts
frontend/src/hooks/: useAuth.ts  useConnectionState.ts  useResizablePanel.ts  useTheme.ts  useWebSocket.ts
frontend/src/services/: api.ts  crypto.ts  pki.ts  websocket.ts
frontend/src/stores/: aiStore.ts  chatStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: time.ts
nginx/: nginx.conf
sqitch/: README.md  sqitch.conf  sqitch.plan
sqitch/deploy/: 0001-initial-schema.sql
sqitch/revert/: 0001-initial-schema.sql
sqitch/verify/: 0001-initial-schema.sql
sql/: init.sql
tests/: .gitignore
tests/api/: conftest.py  pytest.ini  requirements.txt  test_admin.py  test_auth.py  test_calendar.py  test_channels.py  test_cookie_auth.py  test_default_join.py  test_metrics.py  test_mfa.py  test_notifications.py  test_pagination_robustness.py  test_permissions.py  test_space_files.py  test_spaces.py  test_users.py  test_ws_membership.py
tests/e2e/: fixtures.ts  package-lock.json  package.json  playwright.config.ts
tests/e2e/helpers/: api.ts  auth.ts  db.ts  totp.ts
tests/e2e/specs/: admin.spec.ts  auth.spec.ts  ban.spec.ts  calendar.spec.ts  cookie-auth.spec.ts  default-join.spec.ts  emoji-reactions.spec.ts  heartbeat.spec.ts  messaging.spec.ts  mfa.spec.ts  minigames.spec.ts  notifications.spec.ts  personal-spaces.spec.ts  replies.spec.ts  self-demotion.spec.ts  space-files.spec.ts  spaces.spec.ts
tests/integration/multi_instance/: README.md  docker-compose.test.yml  requirements.txt  run.sh  test_scenarios.py
tests/load/: .gitignore  CMakeLists.txt  validate.py
tests/load/config/: profiles.json
tests/load/src/: config.cpp  config.h  http_client.cpp  http_client.h  main.cpp  pki_identity.cpp  pki_identity.h  reporter.cpp  reporter.h  setup.cpp  setup.h  stats.cpp  stats.h  virtual_user.cpp  virtual_user.h  ws_client.cpp  ws_client.h
tests/load/src/scenarios/: auth_load.cpp  auth_load.h  file_upload.cpp  file_upload.h  messaging.cpp  messaging.h  realistic.cpp  realistic.h  rest_api_mix.cpp  rest_api_mix.h  search.cpp  search.h
tools/: sqitch-check.sh
(+27 files in other folders)
